[package]
name = "chess_dl"
version = "0.4.0"
authors = ["Nimrod Hajaj <ndh42@cornell.edu>"]
edition = "2024"
repository = "https://github.com/nimr0d/chess_dl"
description = "Chess.com game downloader"
license = "MIT"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"
bytes = "1"
log = "0.4"
env_logger = "*"
pest = "2"
pest_derive = "2"
peg = "0.8"
clap = { version = "4", features = ["derive"] }
strum = { version = "*", features = ["derive"] }
itertools = "*"
clap_complete = "4.5.50"
clap_derive = "4.0"
