[package]
name = "chess_dl"
version = "0.4.0"
authors = ["Nimrod Hajaj <ndh42@cornell.edu>"]
edition = "2024"
repository = "https://github.com/nimr0d/chess_dl"
description = "Chess.com game downloader"
license = "MIT"
readme = "README.md"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"
bytes = "1"
log = "0.4"
env_logger = "0"
pest = "2"
pest_derive = "2"
peg = "0.8"
clap = { version = "4", features = ["derive"] }
strum = { version = "0", features = ["derive"] }
itertools = "0"
clap_derive = "4.0"

[build-dependencies]
clap_complete = "4.5.50"
clap = { version = "4", features = ["derive"] }
